# google-adk-currency-agent

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .yamllint  GEMINI.md  README.md  Taskfile.yml  pyproject.toml
currency_agent/: agent.py  test_agent_logic.py  test_client.py
mcp-server/: pyproject.toml  server.py  test_server.py
mcp-server/tests/: test_mcp_logic.py
